chore(gallery): fix responsive styling on smaller screens

--- a/client/src/pages/gallery/Gallery.css
+++ b/client/src/pages/gallery/Gallery.css
@@ -71,28 +71,28 @@
 }
 
 @media (max-width: 1200px) {
-  .gallery {
+  .Gallery {
     -moz-column-count: 4;
     -webkit-column-count: 4;
     column-count: 4;
   }
 }
 @media (max-width: 1000px) {
-  .gallery {
+  .Gallery {
     -moz-column-count: 3;
     -webkit-column-count: 3;
     column-count: 3;
   }
 }
 @media (max-width: 800px) {
-  .gallery {
+  .Gallery {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
   }
 }
 @media (max-width: 400px) {
-  .gallery {
+  .Gallery {
     -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;
